# cyfile

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: rust.yaml
documents/: todo.md
examples/: create.rs  export.rs  migrate.rs  open.rs  save.rs
src/: codec.rs  date.rs  file.rs  image.rs  lib.rs  note.rs  page.rs  project.rs
src/codec/: asset.rs  bound.rs  decode.rs  encode.rs  error.rs  mod.rs  reader.rs  writer.rs
src/credit/: credits.rs  mod.rs
src/date/: mod.rs
src/error/: mod.rs
src/export/: arguments.rs  constants.rs  mod.rs
src/ffi/: mod.rs  note.rs  text.rs
src/file/: arguments.rs  check.rs  data.rs  error.rs  export.rs  manifest.rs  mod.rs  open.rs  save.rs  version.rs
src/file/codec/: mod.rs
src/image/: error.rs
src/note/: area.rs  mod.rs  notes.rs  text.rs
src/page/: image.rs  mod.rs  pages.rs
src/project/: asset.rs  builder.rs  mod.rs  note.rs  page.rs  text.rs
src/summary/: mod.rs
src/tags/: mod.rs
src/text/: mod.rs  texts.rs
tests/: file.rs  text.rs
