[package]
name = "cyfile"
version = "0.6.0"
edition = "2024"
license = "MIT"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tempfile = "3.24.0"
thiserror = "2.0.18"
zip = "7.3.0"
